data/manifests/artifacthub/bitnami/external-dns/006_service_release-name-external-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-external-dns
  namespace: default
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-dns
    app.kubernetes.io/version: 0.18.0
    helm.sh/chart: external-dns-9.0.3
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: http
    port: 7979
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: external-dns
