data/manifests/artifacthub/bitnami/external-dns/001_networkpolicy_release-name-external-dns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: release-name-external-dns
  namespace: default
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-dns
    app.kubernetes.io/version: 0.18.0
    helm.sh/chart: external-dns-9.0.3
    app.kubernetes.io/component: controller
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: external-dns
  policyTypes:
  - Ingress
  - Egress
  egress:
  - {}
  ingress:
  - ports:
    - port: 7979
